--- a/PA3-EDA.ipynb
+++ b/PA3-EDA.ipynb
@@ -104,7 +104,7 @@
     "There is often a need to transform a continuous attribute into a categorical attribute. Use the following two approaches to convert MPG into a categorical attribute.\n",
     "\n",
     "**Approach 1**: The US Department of Energy assigns gasoline vehicles a fuel economy rating from 1\n",
-    "(worst) to 10 (best). The ratings are defined in terms of mpg as follows:\n",
+    "(worst) to 10 (best). The ratings are defined in terms of MPG as follows:\n",
     "\n",
     "Rating |MPG\n",
     "-|-|\n",
@@ -121,7 +121,7 @@
     "\n",
     "Use these ranges to define category values (denoting rating 1 to 10) for the mpg attribute.\n",
     "\n",
-    "**Approach 2**: Create 5 \"equal-width\" bins to generate categories. Each bin should divide up the range of mpg values into equal subranges, where value 1 denotes the smallest subrange of values and 5 the largest subrange of values.\n",
+    "**Approach 2**: Create 5 \"equal-width\" bins to generate categories. Each bin should divide up the range of MPG values into equal subranges, where value 1 denotes the smallest subrange of values and 5 the largest subrange of values.\n",
     "\n",
     "For each approach, create a corresponding frequency diagram. Each frequency diagram should label bins according to their corresponding ranges (e.g., \"27--30\").\n",
     "\n",
@@ -198,15 +198,12 @@
     "![Figure 1](https://raw.githubusercontent.com/GonzagaCPSC322/PAs/master/figures/auto_data_charts.png)\n",
     "\n",
     "Example visualizations: \n",
-    "* (a) Frequency diagram\n",
+    "* (a) Frequency diagram of equal width binning\n",
     "* (b) Pie chart\n",
-    "* (c) Dot chart\n",
-    "* (d) Frequency diagram of equal width binning\n",
-    "* (e) Histogram of acceleration values\n",
-    "* (f) Scatter plot comparing displacement to mpg\n",
-    "* (g) Similar plot as in (f) but with linear regression line\n",
-    "* (h) Box and whisker plot\n",
-    "* (i) Multiple frequency diagram"
+    "* (c) Histogram of acceleration values\n",
+    "* (d) Scatter plot comparing displacement to MPG with linear regression line\n",
+    "* (e) Box and whisker plot\n",
+    "* (f) Multiple frequency diagram"
    ]
   },
   {
