--- a/PA3-EDA.ipynb
+++ b/PA3-EDA.ipynb
@@ -200,8 +200,8 @@
     "Example visualizations: \n",
     "* (a) Frequency diagram of equal width binning\n",
     "* (b) Pie chart\n",
-    "* (c) Histogram of acceleration values\n",
-    "* (d) Scatter plot comparing displacement to MPG with linear regression line\n",
+    "* (c) Histogram\n",
+    "* (d) Scatter plot linear regression line\n",
     "* (e) Box and whisker plot\n",
     "* (f) Multiple frequency diagram"
    ]
