confusion matrix fig

--- a/PA3-EDA.ipynb
+++ b/PA3-EDA.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feeling Confident: The Auto Data Dataset (35 pts)\n",
+    "## Feeling Confident: The Auto Dataset (35 pts)\n",
     "Write your EDA and dataset-specific code in AutoData.ipynb. See Figure 1 (a), (c), and (d) for examples of these visualizations required for this dataset.\n",
     "\n",
     "### Step 1 Frequency Diagrams (5 pts)\n",
